# datalogger

./: README.md  pyproject.toml
datalogger/: hooks.py
datalogger/data_logger/doctype/wifilog/: test_wifilog.py  wifilog.js  wifilog.json  wifilog.py
datalogger/fixtures/: custom_docperm.json  role.json
